# expense-budget-tracker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
api/: openapi.yaml
apps/auth/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/site/: Dockerfile  package-lock.json  package.json
apps/sql-api/: package-lock.json  package.json  tsconfig.json
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/worker/: Dockerfile  config.py  lambda_handler.py  package-lock.json  package.json  pyproject.toml  scheduler.py
apps/worker/fetchers/: cbr.py  ecb.py  nbs.py
apps/worker/src/: config.ts  dateUtils.ts  db.ts  dbQueries.ts  lambda.ts  scheduler.ts  types.ts
apps/worker/src/fetchers/: cbr.ts  ecb.ts  nbs.ts  nbu.ts  usdt.ts
db/migrations/: 0001_create_ledger_entries.sql  0001_initial_schema.sql  0002_create_exchange_rates.sql  0002_direct_access.sql  0002_workspace_self_provision.sql  0003_app_role_grants.sql  0003_create_budget_lines.sql  0003_query_indexes.sql  0004_create_budget_comments.sql  0004_fix_exchange_rates_grants.sql  0004_text_length_limits.sql  0005_create_workspace_settings.sql  0005_direct_access.sql  0005_filtered_categories.sql  0006_account_metadata.sql  0006_add_user_id_ledger_entries.sql  0006_create_sessions.sql  0013_users.sql  (+28 more)
docs/: architecture.md  deployment.md
scripts/: bootstrap-ecr.sh  bootstrap.sh  check-web-readiness.sh  invoke-fx-fetcher.sh  migrate.sh  run-migration-task.sh  update-cloudflare-ips.sh
(+291 files in other folders)
